--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>cache-server</module>
         <module>operate-server</module>
         <module>query-server</module>
+        <module>elasticsearch-server</module>
+        <module>mq-server</module>
     </modules>
     <dependencies>
         <dependency>
