--- a/config/pom.xml
+++ b/config/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>feng-cloud-template</artifactId>
         <groupId>com.feng.cloud</groupId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
