--- a/oss-server/pom.xml
+++ b/oss-server/pom.xml
@@ -5,11 +5,28 @@
     <parent>
         <artifactId>feng-cloud-template</artifactId>
         <groupId>com.feng.cloud</groupId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oss-server</artifactId>
 
+    <dependencies>
+        <!--spring web 内嵌jetty容器 相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
