--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <modules>
         <module>common</module>
         <module>config</module>
-        <module>cache-server</module>
-        <module>operate-server</module>
-        <module>query-server</module>
-        <module>elasticsearch-server</module>
-        <module>mq-server</module>
-        <module>oss-server</module>
+        <module>cache</module>
+        <module>operate</module>
+        <module>query</module>
+        <module>elasticsearch</module>
+        <module>stream</module>
+        <module>oss</module>
         <module>eureka</module>
         <module>spring-boot-admin</module>
-        <module>middle-platform</module>
+        <module>middle</module>
     </modules>
 
     <parent>
