--- a/spring-boot-admin/pom.xml
+++ b/spring-boot-admin/pom.xml
@@ -27,7 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
-
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!--springBoot admin server-->
         <dependency>
             <groupId>de.codecentric</groupId>
