--- a/query/src/main/resources/application-dev.yml
+++ b/query/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: spring-boot-admin
+    name: query
 server:
-  port: 8088
+  port: 8087
 management:
   endpoints:
     web:
