--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka</artifactId>
+    <artifactId>stream</artifactId>
+
     <dependencies>
         <!--spring web 内嵌jetty容器 相关依赖-->
         <dependency>
@@ -32,12 +33,5 @@
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>2.2.3</version>
         </dependency>
-        <!--eureka -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-            <version>1.4.7.RELEASE</version>
-        </dependency>
     </dependencies>
-
 </project>
